# WebYoloTrain

./: .gitignore  README.md  manage.py  pyproject.toml
modeling_yolov8/: create_task.py
webyolo/: celery_app.py  settings.py  urls.py  wsgi.py
webyolo/accounts/: admin.py  apps.py  asgi.py  models.py  serializers.py  urls.py  views.py
webyolo/accounts/migrations/: 0001_initial.py  0002_remove_myuser_username_alter_myuser_nickname.py
webyolo/authentication/: authentication.py  serializers.py  urls.py  utils.py  views.py
webyolo/datasets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
webyolo/datasets/migrations/: 0001_initial.py  0002_dataset_is_public.py  0003_dataset_owner.py
webyolo/experiments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
webyolo/frontend/: package-lock.json  package.json
webyolo/frontend/src/: App.js  index.js
webyolo/frontend/src/constants/: authSteps.js  uploadDatasetColors.js  uploadDatasetSteps.js
webyolo/inference/: apps.py  models.py  serializers.py  urls.py  views.py
webyolo/inference/migrations/: 0001_initial.py  0002_inferencetask_prediction_name.py  0003_inferencetask_model_name.py
webyolo/tasks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
webyolo/tasks/migrations/: 0001_initial.py  0002_remove_trainingtask_server_type_and_more.py  0003_rename_user_trainingtask_owner.py  0004_trainingtask_description_trainingtask_name_task.py  0005_trainingtask_experiment_url.py  0006_trainingtask_dataset_id.py  0007_trainingtask_celery_id.py
(+41 files in other folders)
